--- a/deps/rust/crates/BUILD.bazel
+++ b/deps/rust/crates/BUILD.bazel
@@ -332,26 +332,26 @@ alias(
 )
 
 alias(
-    name = "swc_core-35.0.0",
-    actual = "@crates_vendor__swc_core-35.0.0//:swc_core",
+    name = "swc_common-18.0.1",
+    actual = "@crates_vendor__swc_common-18.0.1//:swc_common",
     tags = ["manual"],
 )
 
 alias(
-    name = "swc_core",
-    actual = "@crates_vendor__swc_core-35.0.0//:swc_core",
+    name = "swc_common",
+    actual = "@crates_vendor__swc_common-18.0.1//:swc_common",
     tags = ["manual"],
 )
 
 alias(
-    name = "swc_ts_fast_strip-29.0.0",
-    actual = "@crates_vendor__swc_ts_fast_strip-29.0.0//:swc_ts_fast_strip",
+    name = "swc_ts_fast_strip-41.0.0",
+    actual = "@crates_vendor__swc_ts_fast_strip-41.0.0//:swc_ts_fast_strip",
     tags = ["manual"],
 )
 
 alias(
     name = "swc_ts_fast_strip",
-    actual = "@crates_vendor__swc_ts_fast_strip-29.0.0//:swc_ts_fast_strip",
+    actual = "@crates_vendor__swc_ts_fast_strip-41.0.0//:swc_ts_fast_strip",
     tags = ["manual"],
 )
 
