--- a/deps/rust/crates/BUILD.hstr-3.0.3.bazel
+++ b/deps/rust/crates/BUILD.hstr-3.0.3.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "fnv",
+    name = "hstr",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,27 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
-        "std",
+        "serde",
     ],
-    crate_root = "lib.rs",
-    edition = "2015",
+    crate_root = "src/lib.rs",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=fnv",
+        "crate-name=hstr",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.7",
+    version = "3.0.3",
+    deps = [
+        "@crates_vendor__hashbrown-0.14.5//:hashbrown",
+        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__triomphe-0.1.15//:triomphe",
+    ],
 )
