--- a/deps/rust/crates/BUILD.swc_atoms-9.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_atoms-9.0.0.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "derive_builder_macro",
+rust_library(
+    name = "swc_atoms",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,24 +28,22 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "lib_has_std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=derive_builder_macro",
+        "crate-name=swc_atoms",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.20.2",
+    version = "9.0.0",
     deps = [
-        "@crates_vendor__derive_builder_core-0.20.2//:derive_builder_core",
-        "@crates_vendor__syn-2.0.113//:syn",
+        "@crates_vendor__hstr-3.0.3//:hstr",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__serde-1.0.228//:serde",
     ],
 )
