--- a/deps/rust/crates/BUILD.swc_common-18.0.1.bazel
+++ b/deps/rust/crates/BUILD.swc_common-18.0.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "cargo_metadata",
+    name = "swc_common",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,26 +30,41 @@ rust_library(
     ),
     crate_features = [
         "default",
+        "sourcemap",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__ast_node-5.0.0//:ast_node",
+        "@crates_vendor__from_variant-3.0.0//:from_variant",
+        "@crates_vendor__swc_eq_ignore_macros-1.0.1//:swc_eq_ignore_macros",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=cargo_metadata",
+        "crate-name=swc_common",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.19.2",
+    version = "18.0.1",
     deps = [
-        "@crates_vendor__camino-1.2.2//:camino",
-        "@crates_vendor__cargo-platform-0.1.9//:cargo_platform",
-        "@crates_vendor__semver-1.0.27//:semver",
+        "@crates_vendor__anyhow-1.0.100//:anyhow",
+        "@crates_vendor__better_scoped_tls-1.0.1//:better_scoped_tls",
+        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__either-1.15.0//:either",
+        "@crates_vendor__num-bigint-0.4.6//:num_bigint",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
         "@crates_vendor__serde-1.0.228//:serde",
-        "@crates_vendor__serde_json-1.0.148//:serde_json",
-        "@crates_vendor__thiserror-2.0.17//:thiserror",
+        "@crates_vendor__siphasher-0.3.11//:siphasher",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_sourcemap-9.3.4//:swc_sourcemap",
+        "@crates_vendor__swc_visit-2.0.1//:swc_visit",
+        "@crates_vendor__tracing-0.1.44//:tracing",
+        "@crates_vendor__unicode-width-0.2.2//:unicode_width",
+        "@crates_vendor__url-2.5.7//:url",
     ],
 )
