--- a/deps/rust/crates/BUILD.swc_ecma_parser-32.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_parser-32.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "swc_ecma_transforms_typescript",
+    name = "swc_ecma_parser",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,29 +28,37 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "typescript",
+        "unstable",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__seq-macro-0.3.6//:seq_macro",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=swc_ecma_transforms_typescript",
+        "crate-name=swc_ecma_parser",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "26.0.0",
+    version = "32.0.0",
     deps = [
-        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__bitflags-2.10.0//:bitflags",
+        "@crates_vendor__either-1.15.0//:either",
+        "@crates_vendor__num-bigint-0.4.6//:num_bigint",
+        "@crates_vendor__phf-0.11.3//:phf",
         "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
         "@crates_vendor__serde-1.0.228//:serde",
-        "@crates_vendor__swc_atoms-7.0.0//:swc_atoms",
-        "@crates_vendor__swc_common-14.0.4//:swc_common",
-        "@crates_vendor__swc_ecma_ast-14.0.0//:swc_ecma_ast",
-        "@crates_vendor__swc_ecma_transforms_base-24.0.0//:swc_ecma_transforms_base",
-        "@crates_vendor__swc_ecma_transforms_react-26.0.0//:swc_ecma_transforms_react",
-        "@crates_vendor__swc_ecma_utils-20.0.0//:swc_ecma_utils",
-        "@crates_vendor__swc_ecma_visit-14.0.0//:swc_ecma_visit",
+        "@crates_vendor__smartstring-1.0.1//:smartstring",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__tracing-0.1.44//:tracing",
     ],
 )
