--- a/deps/rust/crates/BUILD.swc_ecma_transforms_base-35.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_transforms_base-35.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "unicode_width",
+    name = "swc_ecma_transforms_base",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "cjk",
-        "default",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -39,10 +35,26 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=unicode-width",
+        "crate-name=swc_ecma_transforms_base",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.14",
+    version = "35.0.0",
+    deps = [
+        "@crates_vendor__better_scoped_tls-1.0.1//:better_scoped_tls",
+        "@crates_vendor__indexmap-2.12.1//:indexmap",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__par-core-2.0.0//:par_core",
+        "@crates_vendor__phf-0.11.3//:phf",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__swc_ecma_parser-32.0.0//:swc_ecma_parser",
+        "@crates_vendor__swc_ecma_utils-25.0.0//:swc_ecma_utils",
+        "@crates_vendor__swc_ecma_visit-19.0.0//:swc_ecma_visit",
+        "@crates_vendor__tracing-0.1.44//:tracing",
+    ],
 )
