--- a/deps/rust/crates/BUILD.swc_ecma_transforms_react-38.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_transforms_react-38.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "swc_ecma_lexer",
+    name = "swc_ecma_transforms_react",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,39 +30,40 @@ rust_library(
     ),
     crate_features = [
         "default",
-        "stacker",
-        "typescript",
+        "serde",
+        "serde-impl",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
     proc_macro_deps = [
-        "@crates_vendor__seq-macro-0.3.6//:seq_macro",
+        "@crates_vendor__string_enum-1.0.2//:string_enum",
     ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=swc_ecma_lexer",
+        "crate-name=swc_ecma_transforms_react",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "22.0.2",
+    version = "38.0.0",
     deps = [
-        "@crates_vendor__arrayvec-0.7.6//:arrayvec",
-        "@crates_vendor__bitflags-2.10.0//:bitflags",
-        "@crates_vendor__either-1.15.0//:either",
-        "@crates_vendor__num-bigint-0.4.6//:num_bigint",
-        "@crates_vendor__phf-0.11.3//:phf",
+        "@crates_vendor__base64-0.22.1//:base64",
+        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__indexmap-2.12.1//:indexmap",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
         "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
         "@crates_vendor__serde-1.0.228//:serde",
-        "@crates_vendor__smallvec-1.15.1//:smallvec",
-        "@crates_vendor__smartstring-1.0.1//:smartstring",
-        "@crates_vendor__stacker-0.1.22//:stacker",
-        "@crates_vendor__swc_atoms-7.0.0//:swc_atoms",
-        "@crates_vendor__swc_common-14.0.4//:swc_common",
-        "@crates_vendor__swc_ecma_ast-14.0.0//:swc_ecma_ast",
-        "@crates_vendor__tracing-0.1.44//:tracing",
+        "@crates_vendor__sha1-0.10.6//:sha1",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_config-3.1.2//:swc_config",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__swc_ecma_parser-32.0.0//:swc_ecma_parser",
+        "@crates_vendor__swc_ecma_transforms_base-35.0.0//:swc_ecma_transforms_base",
+        "@crates_vendor__swc_ecma_utils-25.0.0//:swc_ecma_utils",
+        "@crates_vendor__swc_ecma_visit-19.0.0//:swc_ecma_visit",
     ],
 )
