--- a/deps/rust/crates/BUILD.swc_ecma_transforms_typescript-38.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_transforms_typescript-38.0.0.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "ast_node",
+rust_library(
+    name = "swc_ecma_transforms_typescript",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,15 +35,22 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=ast_node",
+        "crate-name=swc_ecma_transforms_typescript",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "3.0.4",
+    version = "38.0.0",
     deps = [
-        "@crates_vendor__quote-1.0.42//:quote",
-        "@crates_vendor__swc_macros_common-1.0.1//:swc_macros_common",
-        "@crates_vendor__syn-2.0.113//:syn",
+        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__swc_ecma_transforms_base-35.0.0//:swc_ecma_transforms_base",
+        "@crates_vendor__swc_ecma_transforms_react-38.0.0//:swc_ecma_transforms_react",
+        "@crates_vendor__swc_ecma_utils-25.0.0//:swc_ecma_utils",
+        "@crates_vendor__swc_ecma_visit-19.0.0//:swc_ecma_visit",
     ],
 )
