--- a/deps/rust/crates/BUILD.swc_ecma_utils-25.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_utils-25.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "ar_archive_writer",
+    name = "swc_ecma_utils",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,13 +35,23 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=ar_archive_writer",
+        "crate-name=swc_ecma_utils",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.0",
+    version = "25.0.0",
     deps = [
-        "@crates_vendor__object-0.32.2//:object",
+        "@crates_vendor__indexmap-2.12.1//:indexmap",
+        "@crates_vendor__num_cpus-1.17.0//:num_cpus",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__par-core-2.0.0//:par_core",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__ryu-js-1.0.2//:ryu_js",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__swc_ecma_visit-19.0.0//:swc_ecma_visit",
+        "@crates_vendor__tracing-0.1.44//:tracing",
     ],
 )
