--- a/deps/rust/crates/BUILD.swc_ts_fast_strip-41.0.0.bazel
+++ b/deps/rust/crates/BUILD.swc_ts_fast_strip-41.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "hstr",
+    name = "swc_ts_fast_strip",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,9 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "default",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,17 +38,24 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=hstr",
+        "crate-name=swc_ts_fast_strip",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.1.0",
+    version = "41.0.0",
     deps = [
-        "@crates_vendor__hashbrown-0.14.5//:hashbrown",
-        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
-        "@crates_vendor__triomphe-0.1.15//:triomphe",
+        "@crates_vendor__anyhow-1.0.100//:anyhow",
+        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-19.0.0//:swc_ecma_ast",
+        "@crates_vendor__swc_ecma_codegen-21.0.0//:swc_ecma_codegen",
+        "@crates_vendor__swc_ecma_parser-32.0.0//:swc_ecma_parser",
+        "@crates_vendor__swc_ecma_transforms_base-35.0.0//:swc_ecma_transforms_base",
+        "@crates_vendor__swc_ecma_transforms_react-38.0.0//:swc_ecma_transforms_react",
+        "@crates_vendor__swc_ecma_transforms_typescript-38.0.0//:swc_ecma_transforms_typescript",
+        "@crates_vendor__swc_ecma_visit-19.0.0//:swc_ecma_visit",
     ],
 )
