--- a/.bazelrc
+++ b/.bazelrc
@@ -10,8 +10,8 @@ build --test_size_filters=-enormous
 # corresponds to small,medium,large,enormous tests (medium is default)
 build --test_timeout=3,15,60,240
 
-# Opt-in for Bazel 9 forward compatibility
-common --noenable_workspace
+# We're only using bzlmod in a nominal capacity so far
+common --enable_workspace
 
 # As part of starlarkification, Bazel 8 removes a number of rules which now need to be imported from
 # other repositories. In the long term, load() statements will be needed to import these rules. For
@@ -305,7 +305,8 @@ build:windows --enable_runfiles
 # used by some KJ macros, and understands the `.c++` extension by default.
 # As of bazel 7, toolchain resolution is enabled by default, so we need to define a platform for
 # the clang-cl build.
-build:windows --compiler=clang-cl
+build:windows --extra_toolchains=@local_config_cc//:cc-toolchain-x64_windows-clang-cl
+build:windows --extra_execution_platforms=//:x64_windows-clang-cl
 
 # The Windows fastbuild bazel configuration is broken in that it necessarily generates PDB debug
 # information while the Linux and macOS toolchains only compile with debug information in the dbg
