--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -24,6 +24,9 @@ bazel_dep(name = "rules_cc", version = "0.2.15")
 compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
 use_repo(compat, "cc_compatibility_proxy")
 
+cc_configure = use_extension("//cc:extensions.bzl", "cc_configure_extension")
+use_repo(cc_configure, "local_config_cc")
+
 bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
 git_override(
     module_name = "zlib",
