--- a/.github/workflows/_bazel.yml
+++ b/.github/workflows/_bazel.yml
@@ -5,7 +5,7 @@ on:
       image:
         type: string
         required: false
-        default: 'ubuntu-22.04'
+        default: 'ubuntu-22.04-16core'
       os_name:
         type: string
         required: false
