Fix permission grant for manual WPT test workflow

--- a/.github/workflows/wpt-report.yml
+++ b/.github/workflows/wpt-report.yml
@@ -5,7 +5,11 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  # Read repo
+  contents: read
+
+  # Read/write artifacts
+  actions: write
 
 jobs:
   test:
