Fix permission grant for manual WPT test workflow (#5850)
* Fix permission grant for manual WPT test workflow

* Use large runners

--- a/.github/workflows/wpt-report.yml
+++ b/.github/workflows/wpt-report.yml
@@ -5,13 +5,16 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  # Read repo
+  contents: read
+
+  # Read/write artifacts
+  actions: write
 
 jobs:
   test:
     uses: ./.github/workflows/_bazel.yml
     with:
-      image: ubuntu-22.04
       os_name: linux
       suffix: ''
       extra_bazel_args: '--config=ci-test'
