test: add scaffolding for SQL UDF tests
Add test infrastructure for upcoming SQL user-defined function (UDF) feature.
This includes a minimal Durable Object test class and workerd test config
that will be expanded as the UDF implementation progresses.

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -131,6 +131,12 @@ wd_test(
 )
 
 wd_test(
+    src = "sql-udf-test.wd-test",
+    args = ["--experimental"],
+    data = ["sql-udf-test.js"],
+)
+
+wd_test(
     src = "sync-kv-test.wd-test",
     args = ["--experimental"],
     data = [
