--- a/.bazelrc
+++ b/.bazelrc
@@ -39,6 +39,9 @@ build --incompatible_strict_action_env
 # and conserving space
 build --incompatible_compact_repo_mapping_manifest
 
+# Continue building locally when remote cache entries fail to materialize
+build --incompatible_remote_local_fallback_for_remote_cache
+
 # Our dependencies (ICU, zlib, etc.) produce a lot of these warnings, so we disable them.
 build --per_file_copt='external@-Wno-error'
 build --per_file_copt='external@-Wno-suggest-override'
