--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,31 +2,6 @@
 
 module(name = "workerd")
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
-bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
-bazel_dep(name = "bazel_features", version = "1.38.0")
-bazel_dep(name = "bazel_skylib", version = "1.9.0")
-bazel_dep(name = "rules_shell", version = "0.6.1")
-
-# abseil is used by protobuf and tcmalloc.
-bazel_dep(name = "abseil-cpp", version = "20250814.0")
-
-# Not pulling in platforms via bzlmod causes issues with the Windows clang-cl toolchain
-bazel_dep(name = "platforms", version = "1.0.0")
-
-# While the build should succeed with the default toolchain configuration from rules_cc,
-# apple_support is more tailored to macOS and allows us to cross-compile easily. Note that this
-# needs to be pulled in before rules_cc for this toolchain to actually be used.
-bazel_dep(name = "apple_support", version = "2.0.0")
-bazel_dep(name = "rules_cc", version = "0.2.15")
-
-# compatibility proxy is needed when using current rules_cc with Bazel 8
-compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
-use_repo(compat, "cc_compatibility_proxy")
-
-cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
-use_repo(cc_configure, "local_config_cc")
-
 bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
 git_override(
     module_name = "zlib",
@@ -58,13 +33,22 @@ archive_override(
 )
 
 include("//build/deps:deps.MODULE.bazel")
+
+# Automatically managed dependencies
+include("//build/deps:gen/deps.MODULE.bazel")
+include("//build/deps:gen/build_deps.MODULE.bazel")
+include("//build/deps:gen/shared_deps.MODULE.bazel")
+
+# Must be loaded after automated dependencies
+include("//build/deps:rust.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
 include("//build/deps:python.MODULE.bazel")
-include("//build/deps:rust.MODULE.bazel")
 include("//build/deps:v8.MODULE.bazel")
 include("//build/deps:oci.MODULE.bazel")
 
-# Automatically managed dependencies
-include("//build/deps:gen/deps/deps.MODULE.bazel")
-include("//build/deps:gen/build_deps/build_deps.MODULE.bazel")
-include("//build/deps:gen/shared_deps/shared_deps.MODULE.bazel")
+# compatibility proxy is needed when using current rules_cc with Bazel 8
+compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
+use_repo(compat, "cc_compatibility_proxy")
+
+cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
+use_repo(cc_configure, "local_config_cc")
