add codecov for code coverage

--- a/.github/workflows/_bazel.yml
+++ b/.github/workflows/_bazel.yml
@@ -51,6 +51,10 @@ on:
         type: boolean
         required: false
         default: false
+      run_coverage:
+        type: boolean
+        required: false
+        default: false
       fetch_depth:
         type: number
         required: false
@@ -68,6 +72,8 @@ on:
         required: true
       WORKERS_MIRROR_URL:
         required: true
+      CODECOV_TOKEN:
+        required: false
 
 permissions:
   # Read repo
@@ -136,6 +142,25 @@ jobs:
         if: inputs.run_tests
         run: |
           bazel test --remote_cache=https://bazel:${{ secrets.BAZEL_CACHE_KEY }}@bazel-remote-cache.devprod.cloudflare.dev --config=ci ${{ inputs.extra_bazel_args }} ${{ inputs.test_target }}
+      - name: Setup LLVM tools for coverage
+        if: inputs.run_coverage
+        run: |
+          sudo apt-get update && sudo apt-get install -y llvm
+          sudo ln -sf /usr/bin/llvm-profdata /usr/local/bin/llvm-profdata
+          sudo ln -sf /usr/bin/llvm-cov /usr/local/bin/llvm-cov
+      - name: Bazel coverage
+        if: inputs.run_coverage
+        run: |
+          bazel coverage --remote_cache=https://bazel:${{ secrets.BAZEL_CACHE_KEY }}@bazel-remote-cache.devprod.cloudflare.dev --config=ci --config=coverage ${{ inputs.extra_bazel_args }} ${{ inputs.test_target }}
+      - name: Upload coverage to Codecov
+        if: inputs.run_coverage
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./bazel-out/_coverage/_coverage_report.dat
+          fail_ci_if_error: true
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: Parse headers
         # TODO(cleanup): Bazel does not allow for only parsing headers in non-recursive targets, so
         # we can't widely enable header parsing for now (dependencies like V8 do not specify
