--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -43,6 +43,7 @@ wd_test(
         "jsrpc-timing-test.js",
         "jsrpc-timing-test-tail.js",
     ],
+    tags = ["no-coverage"],
 )
 
 # Test for a worker that can log to itself using the isTracer parameter
@@ -128,6 +129,8 @@ wd_test(
         "sql-test.js",
         "sql-test-tail.js",
     ],
+    # Exceeds 240s timeout under coverage instrumentation
+    tags = ["no-coverage"],
 )
 
 wd_test(
