feat: Add Bun runtime compatibility layer
This adds a Bun-compatible API layer for workerd, enabling Bun applications
to run on Cloudflare Workers infrastructure.

Features:
- File operations: Virtual filesystem with DWS Storage (IPFS) support
- Password hashing: Real bcrypt via bcryptjs
- DNS: Real DNS-over-HTTPS (Cloudflare/Google DoH)
- SQLite: In-memory and SQLit HTTP backend support
- Hash functions: wyhash, crc32, adler32, cityhash, murmur
- Stream utilities: readableStreamTo* converters
- ArrayBufferSink for buffer accumulation
- Full Bun.file/write API
- escapeHTML, stringWidth, deepEquals utilities

The implementation provides REAL implementations, not polyfills:
- Password hashes are standard bcrypt ($2b$) compatible
- DNS resolution uses actual DoH providers
- SQLite operations work against real databases

Test coverage:
- 178 unit tests for Bun APIs
- 83 SQLite tests
- 35 integration tests against running workerd

Usage:
1. Bundled mode (works with stock workerd):
   - Build: bun run build:bun
   - Import: import Bun from './bun-bundle.js'

2. Native mode (requires workerd built from source):
   - import Bun from 'bun:bun'
   - Requires nodejs_compat flag enabled

Samples included:
- samples/bun-bundle: Demonstrates bundled compatibility layer
- samples/bun-hello: Demonstrates native bun:* imports

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -343,9 +343,11 @@ wd_cc_library(
         ":r2",
         ":tracing-module",
         ":workers-module",
+        "//src/bun",
         "//src/cloudflare",
         "//src/node",
         "//src/pyodide",
+        "//src/workerd/api/bun",
         "//src/workerd/api/node",
         "//src/workerd/io",
     ],
