test: add test for the `no-export-default-of-import-star` ESLint rule

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@aspect_rules_js//js:defs.bzl", "js_library")
+load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
 load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
 load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
 
@@ -16,6 +16,17 @@ js_library(
         "//:node_modules/typescript",
         "//:node_modules/typescript-eslint",
     ],
+)
+
+js_test(
+    name = "custom-eslint-rules-test",
+    size = "small",
+    data = [
+        "custom-eslint-rules.mjs",
+        "//:node_modules/eslint",
+    ],
+    entry_point = "custom-eslint-rules.test.mjs",
+    tags = ["js-test"],
 )
 
 ts_config(
