Allow network access for container-client test

--- a/src/workerd/server/tests/container-client/BUILD.bazel
+++ b/src/workerd/server/tests/container-client/BUILD.bazel
@@ -7,5 +7,6 @@ wd_test(
     data = ["test.js"],
     tags = [
         "requires-container-engine",
+        "requires-network",  # Accesses unix://var/run/docker.sock
     ],
 )
