update codspeed to v2.0.0

--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -58,8 +58,9 @@ jobs:
           chmod +x run_benchmarks.sh
 
       - name: Run benchmarks
-        uses: CodSpeedHQ/action@v3
+        uses: CodSpeedHQ/action@v4
         with:
+          mode: instrumentation
           run: ./run_benchmarks.sh
 
       - name: Bazel shutdown
