--- a/src/workerd/server/BUILD.bazel
+++ b/src/workerd/server/BUILD.bazel
@@ -66,11 +66,14 @@ wd_cc_binary(
         ":json-logger",
         ":server",
         ":v8-platform-impl",
+        ":workerd-api",
         ":workerd-capnp-schema",
         ":workerd_capnp",
         "//src/pyodide:pyodide_extra_capnp",
         "//src/rust/cxx-integration",
+        "//src/workerd/jsg",
         "//src/workerd/util:autogate",
+        "//src/workerd/util:entropy",
         "//src/workerd/util:perfetto",
         "@capnp-cpp//src/capnp:capnpc",
     ],
@@ -121,6 +124,10 @@ wd_cc_library(
     hdrs = [
         "pyodide.h",
     ],
+    implementation_deps = [
+        "@capnp-cpp//src/kj/compat:kj-gzip",
+        "@capnp-cpp//src/kj/compat:kj-tls",
+    ],
     visibility = ["//visibility:public"],
     deps = [
         "//src/workerd/api:pyodide",
@@ -128,8 +135,6 @@ wd_cc_library(
         "//src/workerd/jsg",
         "@capnp-cpp//src/kj",
         "@capnp-cpp//src/kj:kj-async",
-        "@capnp-cpp//src/kj/compat:kj-gzip",
-        "@capnp-cpp//src/kj/compat:kj-tls",
     ],
 )
 
@@ -156,40 +161,40 @@ wd_cc_library(
         "workerd-api.h",
     ],
     implementation_deps = [
-        "//src/workerd/api:analytics-engine",
-        "//src/workerd/api:capnp",
-        "//src/workerd/api:kv",
-        "//src/workerd/api:streams",
-        "//src/workerd/api:urlpattern",
-        "//src/workerd/api:urlpattern-standard",
-        "//src/workerd/api:worker-loader",
-        "//src/workerd/io:promise-wrapper",
-    ],
-    visibility = ["//visibility:public"],
-    deps = [
         ":actor-id-impl",
         ":fallback-service",
-        ":pyodide",
         ":workerd-debug-port-client",
-        ":workerd_capnp",
         "//src/cloudflare",
         "//src/node",
         "//src/pyodide:pyodide_static",
         "//src/pyodide:python-entrypoint",
         "//src/rust/transpiler",
+        "//src/workerd/api:analytics-engine",
+        "//src/workerd/api:capnp",
         "//src/workerd/api:html-rewriter",
         "//src/workerd/api:hyperdrive",
-        "//src/workerd/api:memory-cache",
-        "//src/workerd/api:pyodide",
+        "//src/workerd/api:kv",
         "//src/workerd/api:r2",
         "//src/workerd/api:rtti",
+        "//src/workerd/api:streams",
+        "//src/workerd/api:urlpattern",
+        "//src/workerd/api:urlpattern-standard",
+        "//src/workerd/api:worker-loader",
         "//src/workerd/api/node",
-        "//src/workerd/io",
+        "//src/workerd/io:promise-wrapper",
         "//src/workerd/io:worker-modules",
-        "//src/workerd/jsg",
         "//src/workerd/util:perfetto",
         "@capnp-cpp//src/kj/compat:kj-gzip",
         "@capnp-cpp//src/kj/compat:kj-tls",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":pyodide",
+        ":workerd_capnp",
+        "//src/workerd/api:memory-cache",
+        "//src/workerd/api:pyodide",
+        "//src/workerd/io",
+        "//src/workerd/jsg",
     ],
 )
 
@@ -203,28 +208,32 @@ wd_cc_library(
         "channel-token.h",
         "server.h",
     ],
-    deps = [
+    implementation_deps = [
         ":actor-id-impl",
-        ":alarm-scheduler",
-        ":channel-token_capnp",
         ":container-client",
         ":facet-tree-index",
         ":fallback-service",
         ":workerd-api",
-        ":workerd_capnp",
         "//src/cloudflare",
         "//src/node",
         "//src/pyodide:pyodide_static",
-        "//src/workerd/api:memory-cache",
-        "//src/workerd/api:pyodide",
-        "//src/workerd/io",
         "//src/workerd/io:bundle-fs",
         "//src/workerd/io:worker-entrypoint",
         "//src/workerd/jsg",
+        "//src/workerd/util:mimetype",
         "//src/workerd/util:perfetto",
+        "//src/workerd/util:uuid",
         "//src/workerd/util:websocket-error-handler",
         "@capnp-cpp//src/kj/compat:kj-gzip",
         "@capnp-cpp//src/kj/compat:kj-tls",
+    ],
+    deps = [
+        ":alarm-scheduler",
+        ":channel-token_capnp",
+        ":workerd_capnp",
+        "//src/workerd/api:memory-cache",
+        "//src/workerd/api:pyodide",
+        "//src/workerd/io",
     ],
 )
 
