--- a/.bazelrc
+++ b/.bazelrc
@@ -73,7 +73,7 @@ build:v8-codegen-opt-windows --per_file_copt=external/abseil-cpp@/O2
 build:v8-codegen-opt-windows --per_file_copt=external/zlib@/O2
 
 # In Google projects, exceptions are not used as a rule. Disabling them is more consistent with the
-# canonical V8 build and improves code size.
+# canonical V8 build and improves code size. Paths are adjusted for bzlmod mangling.
 build:unix --per_file_copt=external/abseil-cpp@-fno-exceptions
 build:unix --per_file_copt=external/protobuf@-fno-exceptions
 build:unix --per_file_copt=external/tcmalloc@-fno-exceptions
@@ -82,7 +82,7 @@ build:unix --per_file_copt=external/perfetto@-fno-exceptions
 build:unix --per_file_copt=external/boringssl@-fno-exceptions
 build:unix --per_file_copt=external/v8@-fno-exceptions
 build:unix --per_file_copt=external/ada-url@-fno-exceptions
-build:unix --per_file_copt=external/simdutf@-fno-exceptions
+build:unix --per_file_copt=external/+http+simdutf@-fno-exceptions
 build:windows --per_file_copt=external/abseil-cpp@/clang:-fno-exceptions
 build:windows --per_file_copt=external/protobuf@/clang:-fno-exceptions
 build:windows --per_file_copt=external/tcmalloc@/clang:-fno-exceptions
@@ -91,7 +91,7 @@ build:windows --per_file_copt=external/perfetto@/clang:-fno-exceptions
 build:windows --per_file_copt=external/boringssl@/clang:-fno-exceptions
 build:windows --per_file_copt=external/v8@/clang:-fno-exceptions
 build:windows --per_file_copt=external/ada-url@/clang:-fno-exceptions
-build:windows --per_file_copt=external/simdutf@/clang:-fno-exceptions
+build:windows --per_file_copt=external/+http+simdutf@/clang:-fno-exceptions
 
 # V8 torque is an exception from this policy, see v8 BUILD.gn.
 build:unix --per_file_copt=external/v8/src/torque@-fexceptions
@@ -339,8 +339,8 @@ build:windows --copt='/Zc:dllexportInlines-'
 build:parse_headers --features=parse_headers --process_headers_in_dependencies
 # Silence some capnproto warnings/errors that are not relevant for header parsing
 build:parse_headers --per_file_copt='.*\.h@-Wno-unused-function,-Wno-pragma-system-header-outside-header'
-build:parse_headers --per_file_copt=external/capnp-cpp/src/kj/common.h@-Wno-unreachable-code
-build:parse_headers --per_file_copt=external/capnp-cpp/src/capnp/arena.h@-DCAPNP_PRIVATE
+build:parse_headers --per_file_copt=external/+http+capnp-cpp/src/kj/common.h@-Wno-unreachable-code
+build:parse_headers --per_file_copt=external/+http+capnp-cpp/src/capnp/arena.h@-DCAPNP_PRIVATE
 
 # optimized configuration
 build:opt -c opt
